--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,6 +24,14 @@ jobs:
     - name: Build
       run: go build -v ./...
 
+  tests:
+    # Задание "tests" зависит от задания "build" и будет выполнено после него
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - uses: actions/setup-go@v4
+
     - name: Test
       run: go test -v ./...
 # Задание проверяет код на соответствие стилю и отсутствие логических ошибок
