--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -36,7 +36,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5.5.1
         with:
-          images: slipko/hello-golang
+          images: slipko/practicum-golang-sprint-twelve
 
       - name: Build and push Docker Inage
         uses: docker/build-push-action@v5
